--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ Network Trash Folder
 Temporary Items
 .apdisk
 https://github.com/novamartin/HadoopRelatedBooks/blob/master/Building%20Machine%20Learning%20Systems%20with%20Python%2C%202nd%20Edition%20PACKT%20March%202015.pdf
+'Building Machine Learning Systems with Python, 2nd Edition PACKT March 2015.pdf'
