Add 'Hadoop MapReduce v2 Cookbook, 2nd Edition PACKT Thilina Gunarathne Feb 2015.pdf' to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Temporary Items
 https://github.com/novamartin/HadoopRelatedBooks/blob/master/Building%20Machine%20Learning%20Systems%20with%20Python%2C%202nd%20Edition%20PACKT%20March%202015.pdf
 'Building Machine Learning Systems with Python, 2nd Edition PACKT March 2015.pdf'
 Clean Data (2015) By Megan Squire PACKT.pdf
+'Hadoop MapReduce v2 Cookbook, 2nd Edition PACKT Thilina Gunarathne Feb 2015.pdf'
