--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ https://github.com/novamartin/HadoopRelatedBooks/blob/master/Building%20Machine%
 'Building Machine Learning Systems with Python, 2nd Edition PACKT March 2015.pdf'
 Clean Data (2015) By Megan Squire PACKT.pdf
 'Hadoop MapReduce v2 Cookbook, 2nd Edition PACKT Thilina Gunarathne Feb 2015.pdf'
+'Hadoop Real-World Solutions Cookbook By Jonathan R. Owens PACKT Feb 2013.pdf' 
