Add 'Learning Predictive Analytics with Python By Ashish Kumar Feb 2016 PACKT.pdf' to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ https://github.com/novamartin/HadoopRelatedBooks/blob/master/Building%20Machine%
 Clean Data (2015) By Megan Squire PACKT.pdf
 'Hadoop MapReduce v2 Cookbook, 2nd Edition PACKT Thilina Gunarathne Feb 2015.pdf'
 'Hadoop Real-World Solutions Cookbook By Jonathan R. Owens PACKT Feb 2013.pdf' 
+'Learning Predictive Analytics with Python By Ashish Kumar Feb 2016 PACKT.pdf'
