--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Clean Data (2015) By Megan Squire PACKT.pdf
 'Hadoop Real-World Solutions Cookbook By Jonathan R. Owens PACKT Feb 2013.pdf' 
 'Learning Predictive Analytics with Python By Ashish Kumar Feb 2016 PACKT.pdf'
 'Learning Python Design Patterns By Chetan Giridhar Feb PACKT 2016.pdf'
+'Machine Learning With R Cookbook By Yu-Wei, Chiu (David Chiu) PACKT March 2015.pdf'
