Add 'Machine Learning with Spark Nick Pentreath PACKT Feb 2015.pdf' to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ Clean Data (2015) By Megan Squire PACKT.pdf
 'Learning Predictive Analytics with Python By Ashish Kumar Feb 2016 PACKT.pdf'
 'Learning Python Design Patterns By Chetan Giridhar Feb PACKT 2016.pdf'
 'Machine Learning With R Cookbook By Yu-Wei, Chiu (David Chiu) PACKT March 2015.pdf'
+'Machine Learning with Spark Nick Pentreath PACKT Feb 2015.pdf'
