--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ Clean Data (2015) By Megan Squire PACKT.pdf
 'Learning Python Design Patterns By Chetan Giridhar Feb PACKT 2016.pdf'
 'Machine Learning With R Cookbook By Yu-Wei, Chiu (David Chiu) PACKT March 2015.pdf'
 'Machine Learning with Spark Nick Pentreath PACKT Feb 2015.pdf'
+'Pig Design Patterns By Pradeep Pasupuleti Apr 2014 PACKT.pdf'
