Add 'R Graph Cookbook By Hrishi V. Mittal 2011 PACKT.pdf' to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ Clean Data (2015) By Megan Squire PACKT.pdf
 'Machine Learning With R Cookbook By Yu-Wei, Chiu (David Chiu) PACKT March 2015.pdf'
 'Machine Learning with Spark Nick Pentreath PACKT Feb 2015.pdf'
 'Pig Design Patterns By Pradeep Pasupuleti Apr 2014 PACKT.pdf'
+'R Graph Cookbook By Hrishi V. Mittal 2011 PACKT.pdf'
