Add 'Scala for Machine Learning By Patrick R. Nicolas Dec 2014 PACKT.pdf' to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ Clean Data (2015) By Megan Squire PACKT.pdf
 'Machine Learning with Spark Nick Pentreath PACKT Feb 2015.pdf'
 'Pig Design Patterns By Pradeep Pasupuleti Apr 2014 PACKT.pdf'
 'R Graph Cookbook By Hrishi V. Mittal 2011 PACKT.pdf'
+'Scala for Machine Learning By Patrick R. Nicolas Dec 2014 PACKT.pdf'
